== Changelog ==

= 1.3.1 =
* Added: For checkboxes and radio buttons if the id:<id> option is set in CF7, we'll properly append <label for='id"> on label elements.
* Enhanced: Added `<fieldset>` wrapper element to radio button groups.

= 1.3.0 =
* Added: the new Google reCAPTCHA shortcode is now supported
* Enhanced: added an additional filter to adjust form field arguments
* Enhanced: a notice in the admin is now shown if the plugin cannot be initialized
* Enhanced: language files no longer bundled in the plugin; now completely relies on language packs
* Fixed: form element errors are now displayed correctly on horizontal forms and hidden on inline forms
* Fixed: plugin constant definitions now happen on 'plugins_loaded' hook
* Fixed: typo 'dismissable' in alert setting / class is now 'dismissible'
* Fixed: readme link to 'Additional Settings' now translateable

= 1.2.4 =
* Tweaked: added textdomain for translate.wordpress.org
* Fixed: defaults are now working correctly on all field types
* Fixed: the label for attribute is no longer printed if no ID has been provided

= 1.2.3 =
* Enhanced: Arguments for every field are now filtered to allow detailed adjustments

= 1.2.2 =
* Fixed: CSS is now specific to the contact form to prevent conflicts

= 1.2.1 =
* Added: the captchar shortcode now supports an 'include_captchac' option to display the captcha image inline with the input field
* Added: the textarea shortcode and all other text inputs now support an 'include_count' option to display their character count inline with them
* Enhanced: the default grid column count of Bootstrap can now be overridden using the form property 'grid_columns'
* Enhanced: the textarea shortcode now supports 'input_before' and 'input_after' (content is displayed above / below the textarea)
* Enhanced: the submit button size can now be adjusted separately from the rest of the form's size
* Tweaked: captcha images now have their image size adjusted to the 'size' form property by default