@@ -35,6 +35,7 @@ node_modules/*
 
 bin/
 tmp/
+composer.lock
 *.tmp
 *.bak
 *.log
