@@ -140,7 +140,7 @@ class CF7BS_Form_Field extends CF7BS_Component {
 						if ( false === strpos( $title, 'wpcf7-free-text' ) ) {
 							$title = esc_html( $title );
 						}
-                        
+
 						$output .= '<div class="checkbox' . $wrapper_class . '">';
 						$output .= '<label '. ( ! empty( $id ) ? ' for="' . esc_attr( $id ) . '"' : '' ) .'>' ;
 						$output .= '<input' . $input_class . ( ! empty( $id ) ? ' id="' . esc_attr( $id ) . '"' : '' ) . ' name="' . esc_attr( $name ) . '" type="checkbox" value="' . esc_attr( $curval ) . '"' . cf7bs_checked( $value, $curval, false ) . ( is_int( $tabindex ) ? ' tabindex="' . $tabindex . '"' : '' ) . $append . '>';
@@ -148,6 +148,9 @@ class CF7BS_Form_Field extends CF7BS_Component {
 						$output .= '</label>';
 						$output .= '</div>';
 					} else {
+						if ( defined( 'CF7BS_FIELDSET_WRAP' ) && CF7BS_FIELDSET_WRAP ) {
+							$output .= '<fieldset>';
+						}
 						if ( 'buttons' == $group_layout ) {
 							$button_group = new CF7BS_Button_Group( array(
 								'mode'		=> 'checkbox',
@@ -159,7 +162,7 @@ class CF7BS_Form_Field extends CF7BS_Component {
 								$is_checked = cf7bs_multiple_checked( $value, $curval, false );
 								$output .= $button_group->insert_button( array(
 									'type'		=> $group_type,
-									'id'		=> $id . ( $counter + 1 ),
+									'id'		=> ! empty( $id ) ? $id . ( $counter + 1 ) : '',
 									'name'		=> $name . '[]',
 									'class'		=> $class,
 									'value'		=> $curval,
@@ -171,7 +174,6 @@ class CF7BS_Form_Field extends CF7BS_Component {
 							$output .= $button_group->close( false );
 						} elseif ( 'inline' == $group_layout && 'inline' != $form_layout ) {
 							$counter = 0;
-                            $output .= '<fieldset>';
 							foreach ( $options as $curval => $title ) {
 								if ( false === strpos( $title, 'wpcf7-free-text' ) ) {
 									$title = esc_html( $title );
@@ -182,10 +184,8 @@ class CF7BS_Form_Field extends CF7BS_Component {
 								$output .= '</label>';
 								$counter++;
 							}
-                            $output .= '</fieldset>';
 						} else {
 							$counter = 0;
-                            $output .= '<fieldset>';
 							foreach ( $options as $curval => $title ) {
 								if ( false === strpos( $title, 'wpcf7-free-text' ) ) {
 									$title = esc_html( $title );
@@ -198,7 +198,9 @@ class CF7BS_Form_Field extends CF7BS_Component {
 								$output .= '</div>';
 								$counter++;
 							}
-                            $output .= '</fieldset>';
+						}
+						if ( defined( 'CF7BS_FIELDSET_WRAP' ) && CF7BS_FIELDSET_WRAP ) {
+							$output .= '</fieldset>';
 						}
 					}
 					break;
@@ -230,6 +232,9 @@ class CF7BS_Form_Field extends CF7BS_Component {
 						$output .= '</label>';
 						$output .= '</div>';
 					} else {
+						if ( defined( 'CF7BS_FIELDSET_WRAP' ) && CF7BS_FIELDSET_WRAP ) {
+							$output .= '<fieldset>';
+						}
 						if ( 'buttons' == $group_layout ) {
 							$button_group = new CF7BS_Button_Group( array(
 								'mode'		=> 'radio',
@@ -241,7 +246,7 @@ class CF7BS_Form_Field extends CF7BS_Component {
 								$is_checked = cf7bs_checked( $value, $curval, false );
 								$output .= $button_group->insert_button( array(
 									'type'		=> $group_type,
-									'id'		=> $id . ( $counter + 1 ),
+									'id'		=> ! empty( $id ) ? $id . ( $counter + 1 ) : '',
 									'name'		=> $name,
 									'class'		=> $class,
 									'value'		=> $curval,
@@ -253,7 +258,6 @@ class CF7BS_Form_Field extends CF7BS_Component {
 							$output .= $button_group->close( false );
 						} elseif( 'inline' == $group_layout && 'inline' != $form_layout ) {
 							$counter = 0;
-                            $output .= '<fieldset>';
 							foreach ( $options as $curval => $title ) {
 								if ( false === strpos( $title, 'wpcf7-free-text' ) ) {
 									$title = esc_html( $title );
@@ -264,10 +268,8 @@ class CF7BS_Form_Field extends CF7BS_Component {
 								$output .= '</label>';
 								$counter++;
 							}
-                            $output .= '</fieldset>';
 						} else {
 							$counter = 0;
-                            $output .= '<fieldset>';
 							foreach ( $options as $curval => $title ) {
 								if ( false === strpos( $title, 'wpcf7-free-text' ) ) {
 									$title = esc_html( $title );
@@ -280,7 +282,9 @@ class CF7BS_Form_Field extends CF7BS_Component {
 								$output .= '</div>';
 								$counter++;
 							}
-                            $output .= '</fieldset>';
+						}
+						if ( defined( 'CF7BS_FIELDSET_WRAP' ) && CF7BS_FIELDSET_WRAP ) {
+							$output .= '</fieldset>';
 						}
 					}
 					break;
